card info correctly align

--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -58,16 +58,16 @@
 
 .carouselTab .cardInfoL {
   float: left;
-  text-align: justify;
+  text-align: left;
   white-space: pre-line;
-  width: 400px;
+  width: 450px;
 }
 
 .carouselTab .cardInfoR {
   float: right;
-  text-align: justify;
+  text-align: right;
   white-space: pre-line;
-  width: 400px;
+  width: 450px;
 }
 
 /* background styling carousel
